# rusty-tree

./: .gitignore  Cargo.toml  LICENSE  Plotting Trees.ipynb  README.md  Untitled.ipynb  example.py  foo.hdf5  res.txt  test.vtk  test.vtu  test_tree
.github/workflows/: release.yaml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
benches/: adaptive_octree_benchmarks.rs  regular_octree_benchmarks.rs
crates/parallel-tests/: Cargo.toml
crates/parallel-tests/src/: main.rs
crates/rusty-tree/: Cargo.toml  environment.yaml  example.py  pyproject.toml
crates/rusty-tree/conda.recipe/: meta.yaml
crates/rusty-tree/python/: example.py  requirements.txt  setup.py
crates/rusty-tree/python/conda.recipe/: meta.yaml
crates/rusty-tree/python/rusty_tree/: __init__.py  constants.py  distributed.py  morton.py
crates/rusty-tree/python/rusty_tree/types/: domain.py  morton.py  point.py
crates/rusty-tree/rusty_tree/: __init__.py  constants.py  distributed.py  helpers.py  morton.py
crates/rusty-tree/rusty_tree/rusty_tree/: __init__.py  ffi.py
crates/rusty-tree/rusty_tree/test/: test_morton.py
crates/rusty-tree/rusty_tree/types/: domain.py  iterator.py  morton.py  point.py
crates/rusty-tree/src/: adaptive.rs  c_api.rs  constants.rs  data.rs  distribute.rs  distributed.rs  helpers.rs  lib.rs  main.rs  octree.rs  regular.rs  single_node.rs
crates/rusty-tree/src/c_api/: constants.rs  distributed.rs  helpers.rs  morton.rs  serial_tree.rs  single_node.rs
crates/rusty-tree/src/c_api/types/: domain.rs  mod.rs  morton.rs  point.rs
crates/rusty-tree/src/types/: domain.rs  mod.rs  morton.rs  point.rs
crates/scaling/: Cargo.toml
examples/: create_adaptive_octree.rs  create_regular_octree.rs
experiments/: weak.slurm
rusty_tree/: __init__.py  morton.py
rusty_tree/test/: test_morton.py
src/: adaptive.rs  adaptive_octree.rs  c_api.rs  constants.rs  distribute.rs  distributed.rs  distributed_octree.rs  helpers.rs  lib.rs  local.rs  main.rs  morton.rs  octree.rs  regular.rs  regular_octree.rs  serial_octree.rs  types.rs
src/c_api/: distributed.rs  morton.rs  octree.rs  serial_tree.rs
src/octree/: adaptive_octree.rs  regular_octree.rs
src/specializations/: adaptive.rs  uniform.rs
src/types/: domain.rs  mod.rs  morton.rs  point.rs
