[package]
name = "rusty-tree"
version = "0.1.0"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa"]
edition = "2018"
description = "Octree data structures in Rust."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/rusty-tree"
repository = "https://github.com/rusty-fast-solvers/rusty-tree"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rusty_tree"
crate-type = ["lib", "cdylib"]

[dependencies]
rusty-kernel-tools = "0.1"
num = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
rand = "0.8"
itertools = "0.10"
rayon = "1.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "regular_octree_benchmarks"
harness = false

