[package]
name = "rusty-tree"
version = "0.0.1"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa"]
edition = "2018"
description = "Octree data structures in Rust."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/rusty-tree"
repository = "https://github.com/rusty-fast-solvers/rusty-tree"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rusty_tree"
crate-type = ["lib", "cdylib"]

[dependencies]
rand = "0.8"
itertools = "0.10"
mpi = { git = "https://github.com/rsmpi/rsmpi", branch = "main"}
hyksort = { git = "https://github.com/skailasa/hyksort", branch = "main"}


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

#[[bench]]
#name = "regular_octree_benchmarks"
#harness = false

#[[bench]]
#name = "adaptive_octree_benchmarks"
#harness = false
