[package]
name = "rusty-tree"
version = "0.0.1"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa"]
edition = "2018"
description = "Octree data structures in Rust."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/rusty-tree"
repository = "https://github.com/rusty-fast-solvers/rusty-tree"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rusty_tree"
crate-type = ["lib", "cdylib"]

[dependencies]
#rusty-kernel-tools = "0.1"
#rusty-base = { version = "0.1", path = "../rusty-base"}
#num = "0.3"
#ndarray = { version = "0.*", features = ["rayon"] }
#rand = "0.8"
itertools = "0.10"
#rayon = "1.5"
#vtkio = "0.6"
mpi = { git = "https://github.com/rsmpi/rsmpi", branch = "main"}
memoffset = "0.6"
rand = "0.8.4"
hyksort = {git = "https://github.com/skailasa/hyksort", branch = "main"}
const_env = "0.1.2"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

#[[bench]]
#name = "regular_octree_benchmarks"
#harness = false

#[[bench]]
#name = "adaptive_octree_benchmarks"
#harness = false
