[package]
name = "parallel-tests"
version = "1.1.0"
edition = "2018"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa <srinathkailasa@gmail.com>"]
description = "Tests for MPI functionality in `rusty-tree`"
license = "BSD-3-Clause"

[dependencies]
rusty-tree = {path = "../rusty-tree"}
mpi = { git = "https://github.com/rsmpi/rsmpi", branch = "main"}
rand = "0.8.4"