[package]
name = "rusty-tree"
version = "0.0.1"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa <srinathkailasa@gmail.com>"]
edition = "2018"
description = "Octree data structures in Rust."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/rusty-tree"
repository = "https://github.com/rusty-fast-solvers/rusty-tree"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rusty_tree"
crate-type = ["lib", "cdylib"]


[dependencies]
itertools = "0.10"
mpi = { git = "https://github.com/rsmpi/rsmpi", branch = "main"}
memoffset = "0.6"
rand = "0.8.4"
hyksort = {git = "https://github.com/skailasa/hyksort", branch = "tmp"}