[package]
name = "scaling"
version = "0.1.0"
edition = "2018"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa <srinathkailasa@gmail.com>"]
description = "Tests for MPI functionality in `rusty-tree`"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-tree = {path = "../rusty-tree"}
# mpi = { git = "https://github.com/rsmpi/rsmpi", branch = "main"}
mpi = { path = "../../../rsmpi" }
rand = "0.8.4"

[[bin]]
name = "weak"
path = "src/weak/bin/main.rs"
